@@ -1,4 +1,5 @@
 #
+# $OpenBSD: fplsp.sa,v 1.2 1996/05/30 22:14:14 niklas Exp $
 # $NetBSD: fplsp.sa,v 1.2 1996/05/15 19:47:48 is Exp $
 #
 
